--- a/Página 2/style.css
+++ b/Página 2/style.css
@@ -33,10 +33,19 @@ body {
 .texto {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center; /* Centraliza os itens no eixo horizontal */
     padding: 20px;
     width: 75%;
     font-weight: 600;
+}
+
+.texto img {
+    display: block;
+    margin: 20px auto; /* Centraliza as imagens */
+    width: 100%;
+    height: auto;
+    max-width: 560px;
+    border-radius: 10px;
 }
 
 /* Responsividade para a largura da sidebar e conteúdo */
@@ -56,7 +65,7 @@ body {
     .texto {
         order: 1;
     }
-} /* <-- Correção: Fechar chave aqui */
+}
 
 /* Responsividade para o iframe */
 iframe {
@@ -75,7 +84,6 @@ nav h5 {
     font-size: 1rem;
     margin-bottom: 10px;
     cursor: pointer;
-    
 }
 
 .texto h1 {
@@ -88,8 +96,6 @@ footer {
     color: #fff;
     padding: 20px;
     text-align: center;
-    position: relative;
-    bottom: 0;
     width: 100%;
 }
 
@@ -127,17 +133,9 @@ footer {
         margin: 5px;
     }
 }
+
 a{
     text-decoration: none;
     color: blanchedalmond;
-}
-
-.texto img{
-    display: block;
-    margin: 20px auto; /* Centraliza as imagens */
-    width: 100%;
-    height: auto;
-    max-width: 560px;
-    border-radius: 10px;
 }
 
