--- a/Página 4/style.css
+++ b/Página 4/style.css
@@ -56,6 +56,10 @@ body {
     .texto {
         order: 1;
     }
+    .member img {
+        width: 100px;
+
+    }
 } /* <-- Correção: Fechar chave aqui */
 
 /* Responsividade para o iframe */
@@ -141,3 +145,27 @@ a{
     border-radius: 10px;
 }
 
+.team {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.member {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+}
+
+.member img {
+    width: 150px; /* Largura padrão das imagens */
+    height: 170px;
+    border-radius: 50%;
+}
+
+.mar{
+    text-align: center;
+    color: cornflowerblue;
+}
