--- a/style.css
+++ b/style.css
@@ -140,4 +140,9 @@ a{
     max-width: 560px;
     border-radius: 10px;
 }
+.imagem:hover .filtro{ /*estilo aplicado apenas no hover do div imagem*/
+    width:100%;
+    height:100%;
+    background-color:rgba(0,0,0,0.3);
+  }
 
