Algumas Alterações Básicas

--- a/Página 4/style.css
+++ b/Página 4/style.css
@@ -117,8 +117,12 @@ footer {
 }
 
 .social-icons img {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
+}
+.social-icons .face{
+    width: 32px;
+    height: 32px;
 }
 
 /* Responsividade para o footer */
