--- a/Página 2/style.css
+++ b/Página 2/style.css
@@ -119,8 +119,13 @@ footer {
 }
 
 .social-icons img {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
+}
+.social-icons .face {
+    width: 32px;
+    height: 32px;
+
 }
 
 /* Responsividade para o footer */
