--- a/Página 3/style.css
+++ b/Página 3/style.css
@@ -113,8 +113,12 @@ footer {
 }
 
 .social-icons img {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
+}
+.social-icons .face{
+    width: 32px;
+    height: 32px;
 }
 
 /* Responsividade para o footer */
