--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-/* Reseta margens e espaçamentos */
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/* Estilização geral do body */
+
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
@@ -15,13 +15,13 @@ body {
     background-color: blanchedalmond;
 }
 
-/* Estilo da área de conteúdo principal */
+
 .container {
     display: flex;
     flex-wrap: wrap;
 }
 
-/* Estilo para o menu lateral */
+
 .sidebar {
     background-color: black;
     color: blanchedalmond;
@@ -29,7 +29,7 @@ body {
     width: 15%;
 }
 
-/* Estilo para o texto */
+
 .texto {
     display: flex;
     flex-direction: column;
@@ -39,7 +39,7 @@ body {
     font-weight: 600;
 }
 
-/* Responsividade para a largura da sidebar e conteúdo */
+
 @media only screen and (max-width: 768px) {
     .container {
         flex-direction: column-reverse;
@@ -56,9 +56,9 @@ body {
     .texto {
         order: 1;
     }
-} /* <-- Correção: Fechar chave aqui */
+} 
 
-/* Responsividade para o iframe */
+
 iframe {
     width: 100%;
     height: 300px;
@@ -66,7 +66,7 @@ iframe {
     border-radius: 10px;
 }
 
-/* Estilo para o menu de navegação */
+
 nav h1 {
     font-size: 1.5rem;
 }
@@ -82,7 +82,7 @@ nav h5 {
     text-align: center;
 }
 
-/* Estilo para o footer */
+
 footer {
     background-color: #000;
     color: #fff;
@@ -103,21 +103,26 @@ footer {
     margin: 5px 0;
 }
 
-/* Ícones sociais */
+
 .social-icons {
     margin-top: 10px;
 }
 
 .social-icons a {
-    margin: 0 10px; /* Corrigido o espaçamento dos ícones */
+    margin: 0 10px; 
 }
 
 .social-icons img {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
+}
+.social-icons .face{
+    width: 32px;
+    height: 32px;
+    
 }
 
-/* Responsividade para o footer */
+
 @media only screen and (max-width: 768px) {
     .footer-content {
         flex-direction: column;
@@ -134,15 +139,11 @@ a{
 
 .texto img{
     display: block;
-    margin: 20px auto; /* Centraliza as imagens */
+    margin: 20px auto; 
     width: 100%;
     height: auto;
     max-width: 560px;
     border-radius: 10px;
 }
-.imagem:hover .filtro{ /*estilo aplicado apenas no hover do div imagem*/
-    width:100%;
-    height:100%;
-    background-color:rgba(0,0,0,0.3);
-  }
+
 
