--- a/Página 4/style.css
+++ b/Página 4/style.css
@@ -161,6 +161,8 @@ a{
     flex-direction: column;
     align-items: center;
     margin: 10px;
+    background-color: burlywood;
+    border-radius: 15px;
 }
 
 .member img {
@@ -171,5 +173,6 @@ a{
 
 .mar{
     text-align: center;
-    color: cornflowerblue;
+    color: black;
+    padding: 20px;
 }
